--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">GeoKey + Mapbox</string>
+    <string name="geokey_token">YOUR_TOKEN_HERE</string>
+    <string name="mapbox_token">YOUR_TOKEN_HERE</string>
+
 </resources>
